package Comprehensive1;

/**
 * @Author: sun
 * @Date: 2021/4/29 10:29
 * @title: Employee
 * @Description:
 * @version: 1.0
 */
public interface Employee {
    public String Show(String s);
}
