package Comprehensive1;

/**
 * @Author: sun
 * @Date: 2021/4/29 10:51
 * @title: chou
 * @Description:
 * @version: 1.0
 */
public abstract class chou {
    public abstract String show();
}
