package Comprehensive1;

/**
 * @Author: sun
 * @Date: 2021/4/29 10:51
 * @title: substitute
 * @Description:
 * @version: 1.0
 */
public class substitute extends chou{


    @Override
    public String show() {
        String S="演出不像";
        return S;
    }
}
