@startuml
'https://plantuml.com/class-diagram

class Star
class Proxv{
-star:Star
}

interface Employee{
+Show(s:String):String
}

Star--|>Employee
Proxv--|>Employee
Proxv-->Star

class substitute

abstract chou{
abstract show():void
}
substitute--|>chou

abstract class Decorator{
+ chou:chou
}

class ConcreteDecotator{
-xiu():String
}

ConcreteDecotator--|>Decorator
Decorator-->chou
Decorator--|>chou



@enduml